<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/nity"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginBottom="333dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/login"
        android:textColor="@color/purple_200"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:hint="@string/email"
            android:inputType="textEmailSubject"
            android:textColor="@color/white"
            android:textColorHint="@color/purple_200">

        </EditText>

        <EditText
            android:id="@+id/pass"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="#b088f9">

        </EditText>

        <TextView
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/new_user"
            android:textColor="@color/purple_200">

        </TextView>


    </LinearLayout>

    <TextView
        android:id="@+id/btnSinUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="250dp"
        android:gravity="center"
        android:text="@string/sinUp"
        android:textColor="@color/purple_200">

    </TextView>

    <Button
        android:id="@+id/login"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="300dp"
        android:backgroundTint="@color/Mix"
        android:gravity="center"
        android:text="@string/loginT">

    </Button>

    <TextView
        android:id="@+id/tvAttempts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginTop="9dp"
        android:gravity="center"
        android:text="@string/no_of_attempts_remaining_5"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold">

    </TextView>


</RelativeLayout>