<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/nity"
    tools:context=".Register">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="333dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/register"
        android:textColor="@color/purple_200"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/reg_email"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:hint="@string/Email"
            android:textColorHint="#b088f9"
            android:textColor="@color/white"
            android:inputType="textEmailSubject">

        </EditText>

        <EditText
            android:id="@+id/reg_pass"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:hint="@string/password"
            android:textColorHint="#b088f9"
            android:textColor="@color/white"
            android:inputType="textPassword">

        </EditText>

        <TextView
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/purple_200"
            android:layout_marginLeft="20dp"
            android:text="@string/have_an_account">
        </TextView>



    </LinearLayout>

    <TextView
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="290dp"
        android:layout_marginStart="130dp"
        android:text="@string/login"
        android:textColor="@color/purple_200"
        android:onClick="login_btn">
    </TextView>
    <Button
        android:id="@+id/btn_reg"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="350dp"
        android:text="@string/registerR"
        android:layout_marginLeft="125dp"
        android:backgroundTint="@color/Mix">

    </Button>


</RelativeLayout>